--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -11,6 +11,7 @@ body {
   color: $base-black;
   font-size: 12px;
   line-height: 16px;
+  text-align: center;
 
   background-color: $lightest-grey;
 }
