--- a/source/sass/blocks/marketplace.scss
+++ b/source/sass/blocks/marketplace.scss
@@ -1,12 +1,17 @@
-.menu {
-  list-style: none;
+.marketplace {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
-.menu__link {
+.marketplace__title {
+  @include h4-title;
+}
+
+.marketplace__link {
   text-decoration: none;
   text-transform: uppercase;
   color: $base-black;
   font-weight: 500;
+  letter-spacing: 2%;
 }
