--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,6 +4,7 @@
 
 .catalog__title {
   margin: 0;
+  margin-bottom: 20.65px;
   font-size: 24px;
   line-height: 36px;
   font-weight: 700;
@@ -34,5 +35,6 @@
 }
 
 .catalog__badge {
+  margin-bottom: 4px;
   @include badge;
 }
