--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,14 +1,18 @@
 .header {
-  padding: 12px 20px;
   width: 100%;
   min-height: 60px;
   display: flex;
   align-items: center;
   box-sizing: border-box;
+
+  @media (min-width: $tablet) {
+    padding: 12px 20px;
+  }
 }
 
 .header__logo {
   margin-right: auto;
+  margin-left: 20px;
   display: flex;
   align-items: center;
 }
@@ -25,12 +29,16 @@
   display: flex;
 }
 
+.header__navigation {
+  order: 10;
+}
+
 //*Кнопка меню
 .header__navigation-button {
   display: block;
   padding: 0;
   width: 60px;
-  height: 100%;
+  height: 60px;
   position: relative;
 
   background-color: transparent;
@@ -47,8 +55,8 @@
 .header__navigation-button--closed .header__navigation-button::before {
   position: absolute;
   content: "";
-  top: 7px;
-  left: 0;
+  top: 50%;
+  left: calc(50% - 8px);
   width: 16px;
   height: 1.5px;
   background-color: $base-black;
