--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,24 +1,71 @@
 .price__title {
   padding: 0;
+  margin-bottom: 21.46px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   text-align: left;
 }
 
+.price__slider {
+  margin-bottom: 36.53px;
+  width: 100%;
+  height: 2px;
+  background-color: $light-grey;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    height: 4.18px;
+    background-color: $primary-lighter;
+    width: 70vw;
+    top: -50%;
+    left: 0;
+  }
+}
+
+.price__slider-thumb {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: $base-white;
+  box-shadow: inset 0 0 0 2px $primary-lighter;
+  position: relative;
+  top: -10.5px;
+
+  &::before {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: $base-white;
+    box-shadow: inset 0 0 0 2px $primary-lighter;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 70vw;
+  }
+}
+
 .price__input-wrapper {
   display: flex;
   justify-content: space-between;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='3' viewBox='0 0 10 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.40269 2.17684H0.597656V0.0853271H9.40269V2.17684Z' fill='%23BDBDBD'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 23.7px;
 }
 
 .price__input {
-  padding: 0;
+  padding: 7px 10px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
   max-width: 118px;
   text-align: center;
   border-radius: 4px;
-  border-color: $primary-lighter;
-  border-width: 2px;
+  box-shadow: inset 0 0 0 2px $primary-lighter;
+  border: none;
+  box-sizing: border-box;
 }
