--- a/source/sass/blocks/milk-type.scss
+++ b/source/sass/blocks/milk-type.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 50px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-bottom: 22.07px;
 }
 
 .milk-type__title {
