--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -6,6 +6,9 @@
 
 .special__img-wrapper {
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .special__title {
