--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -27,6 +27,7 @@ button {
   font-weight: 400;
   font-family: 'Montserrat', sans-serif;
   color: $base-black;
+  cursor: pointer;
 }
 
 .visually-hidden {
