--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,10 +10,15 @@
   font-weight: 700;
 }
 
-.catalog__filter fieldset {
+.catalog__buttons {
   margin: 0;
   padding: 0;
   border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24.5px;
+  margin-bottom: 40.45px;
 }
 
 .catalog__button {
