--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,3 +1,10 @@
+.price {
+  margin: 0;
+  margin-bottom: 23.7px;
+  padding: 0;
+  border: none;
+}
+
 .price__title {
   padding: 0;
   margin-bottom: 21.46px;
@@ -34,6 +41,7 @@
   box-shadow: inset 0 0 0 2px $primary-lighter;
   position: relative;
   top: -10.5px;
+  cursor: pointer;
 
   &::before {
     width: 24px;
@@ -54,7 +62,6 @@
   background-image: url("data:image/svg+xml,%3Csvg width='10' height='3' viewBox='0 0 10 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.40269 2.17684H0.597656V0.0853271H9.40269V2.17684Z' fill='%23BDBDBD'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: center;
-  margin-bottom: 23.7px;
 }
 
 .price__input {
