--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,16 +1,31 @@
-.contacts__title {
-  @include h4-title;
+.contacts__item {
+  &:not(:last-child) {
+    margin-bottom: 16px;
+  }
 }
 
+
+.contacts__wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+
 .contacts__address {
-  margin: 0;
   font-size: 14px;
   line-height: 20px;
+}
+
+.contacts__link {
+  text-decoration: none;
 }
 
 .contacts__phone {
+  color: $base-black;
   font-size: 14px;
   line-height: 20px;
-  text-decoration: none;
-  color: $base-black;
+}
+
+.contacts__img {
+  margin-right: 6px;
 }
