--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -17,6 +17,12 @@
   align-items: center;
 }
 
+.header__text {
+  @media (max-width: $tablet) {
+    display: none;
+  }
+}
+
 .header__menu {
   display: none;
 
