--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,6 +1,17 @@
-@media (max-width: $tablet) {
-  .logo__text {
-    display: none;
-  }
+.logo {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  width: 82px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.logo__text {
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 800;
+  color: $base-black;
 }
 
