--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -13,8 +13,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 16px;
+  line-height: 24px;
+  color: $base-primary;
 
   &--active {
     background-color: transparent;
+    font-weight: 600;
+    color: $base-black;
+  }
+}
+
+.pagination__link-name {
+  @media (max-width: $tablet) {
+    display: none;
   }
 }
