--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -24,6 +24,7 @@
 
 .products__list {
   margin: 0;
+  margin-bottom: 40px;
   padding: 0;
   list-style: none;
 }
@@ -40,6 +41,7 @@
 
 .products__title {
   margin: 0;
+  margin-bottom: 4px;
   font-size: 18px;
   line-height: 32px;
   font-weight: 700;
@@ -47,6 +49,7 @@
 
 .products__text {
   margin: 0;
+  margin-bottom: 16px;
   font-size: 14px;
   line-height: 20px;
 }
