--- a/source/sass/blocks/milk-type.scss
+++ b/source/sass/blocks/milk-type.scss
@@ -40,28 +40,37 @@
   opacity: 0;
   z-index: -1;
 
+  &:hover + .milk-type__input-mark,
+  &:focus + .milk-type__input-mark {
+    outline: 2px solid $primary-lighter;
+    outline-offset: -2px;
+    background-color: $primary-opacity;
+    box-shadow: inset 0 0 0 2px $base-white;
+  }
+
   &:checked + .milk-type__input-mark {
     border: 2px solid $base-primary;
     background-color: $base-primary;
     box-shadow: inset 0 0 0 2px $base-white;
+    outline: none;
   }
 
-  // &:hover + .milk-type__input-mark {
-  //   border-color: $color-5;
-  // }
-
-  &:disabled + .milk-type__input-mark{
+  &:disabled + .milk-type__input-mark {
     background-color: transparent;
     border: 2px solid $light-grey;
+    box-shadow: none;
+    outline: none;
   }
 
   &:disabled ~ .milk-type__input-name {
     color: $base-grey;
   }
 
-  // &:focus + .milk-type__input-mark {
-  //   outline: 2px solid $text-light-dark-1;
-  // }
+  &:checked:disabled + .milk-type__input-mark {
+    background-color: $light-grey;
+    outline: 2px solid $base-white;
+    outline-offset: -4px;
+  }
 }
 
 .milk-type__input-mark {
