--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -11,15 +11,31 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  align-items: center;
 }
 
 .products__sort-select {
+  padding: 4px 10px;
   border: none;
   background-color: transparent;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   color: $base-primary;
+  cursor: pointer;
+  max-width: 165px;
+  box-sizing: border-box;
+
+  &:hover,
+  &:focus {
+    background-color: $base-secondary;
+    outline: none;
+  }
+}
+
+.products__sort-select option {
+  background-color: $base-white;
+  color: $base-black;
 }
 
 .products__list {
