--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -3,44 +3,41 @@
   align-items: center;
 }
 
-.user-nav__button {
-  text-transform: uppercase;
-  background-color: transparent;
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 500;
-  padding: 0;
+.user-nav__button,
+.user-nav__link {
   width: 60px;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.user-nav__button span {
-  display: none;
+  text-transform: uppercase;
+  font-weight: 500;
 
   @media (min-width: $tablet) {
-    display: block;
+    width: 60px;
+    height: 80px;
   }
 }
 
-.user-nav__link {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: $base-black;
-  font-weight: 500;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.user-nav__button {
+  padding: 0;
+
+  font-size: 12px;
+  line-height: 16px;
+
+  background-color: transparent;
 }
 
+.user-nav__link {
+  text-decoration: none;
+  color: $base-black;
+}
+
+.user-nav__button span,
 .user-nav__link span {
   display: none;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $desktop) {
     display: block;
   }
 }
