tablet res ready

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -2,6 +2,10 @@
   padding: 50px 20px 60px;
 
   background-color: $base-white;
+
+  @media (min-width: $tablet) {
+    padding: 60px 30px 100px;
+  }
 }
 
 .advantages__img {
@@ -15,6 +19,12 @@
   font-size: 24px;
   line-height: 36px;
   font-weight: 700;
+
+  @media (min-width: $tablet) {
+    font-size: 42px;
+    line-height: 64px;
+    margin-bottom: 60px;
+  }
 }
 
 .advantages__list {
@@ -22,11 +32,28 @@
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 50px;
+    column-gap: 30px;
+  }
 }
 
 .advantages__item {
   &:not(:last-child) {
     margin-bottom: 32px;
+  }
+
+  @media (min-width: $tablet) {
+    display: grid;
+    grid-template-columns: 50px auto;
+    gap: 20px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -37,6 +64,18 @@
   font-size: 18px;
   line-height: 32px;
   font-weight: 700;
+
+  @media (min-width: $tablet) {
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 10px;
+  }
+}
+
+.advantages__text-wrapper {
+  @media (min-width: $tablet) {
+    text-align: left;
+  }
 }
 
 .advantages__text {
@@ -44,6 +83,11 @@
 
   font-size: 14px;
   line-height: 20px;
+
+  @media (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .advantages__badge {
