--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -3,6 +3,10 @@
   margin-bottom: 23.7px;
   padding: 0;
   border: none;
+
+  @media (min-width: $tablet) {
+    margin-bottom: 0;
+  }
 }
 
 .price__title {
