--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,21 @@
 @import './blocks/developer.scss';
 @import './blocks/developer.scss';
 @import './blocks/badge.scss';
+@import './blocks/map.scss';
+
+
+
+// .img-wrapper {
+//   margin-bottom: 24px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+
+//   @media (min-width: $tablet) {
+//     order: 2;
+//     margin: 0;
+//   }
+// }
 
 // .logo
 
