--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,9 @@
 .catalog {
   padding: 50px 20px 44px;
+
+  @media (min-width: $tablet) {
+    padding: 80px 0 90px;
+  }
 }
 
 .catalog__title {
@@ -9,6 +13,23 @@
   font-size: 24px;
   line-height: 36px;
   font-weight: 700;
+
+  @media (min-width: $tablet) {
+    font-size: 42px;
+    line-height: 64px;
+    padding: 0 20px;
+  }
+}
+
+.catalog__filter {
+  @media (min-width: $tablet) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 22px;
+    row-gap: 40px;
+    margin-bottom: 44px;
+    padding: 0 20px;
+  }
 }
 
 .catalog__buttons {
@@ -22,6 +43,14 @@
 
   gap: 24.5px;
   border: none;
+
+  @media (min-width: $tablet) {
+    margin: 0;
+    grid-column: 1/-1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .catalog__button {
@@ -32,6 +61,10 @@
   line-height: 24px;
 
   border-radius: 4px;
+
+  @media (min-width: $tablet) {
+    padding: 8px 5px;
+  }
 }
 
 .catalog__button--submit {
