--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -2,8 +2,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  width: 82px;
-  justify-content: space-between;
+  max-width: 170px;
   cursor: pointer;
 }
 
@@ -15,3 +14,6 @@
   color: $base-black;
 }
 
+.logo svg {
+  padding: 0 6px;
+}
