--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -13,6 +13,11 @@
   text-transform: uppercase;
   font-weight: 500;
 
+  &:hover,
+  &:focus {
+    color: $base-primary;
+  }
+
   @media (min-width: $tablet) {
     width: 60px;
     height: 80px;
