--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -9,11 +9,27 @@
     padding: 60px 80px 0;
     background-image: linear-gradient(to bottom, $flat-white 77%, $base-white 77%);
   }
+
+  @media (min-width: $desktop) {
+    padding: 30px 80px 60px;
+    background-image: none;
+    display: grid;
+    grid-template-columns: 600px auto;
+    gap: 30px;
+  }
 }
 
 .special__info {
   @media (min-width: $tablet) {
     margin-bottom: 20px;
+  }
+
+  @media (min-width: $desktop) {
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
   }
 }
 
@@ -27,12 +43,21 @@
     order: 2;
     margin: 0;
   }
+
+  @media (min-width: $desktop) {
+    order: 0;
+  }
 }
 
 .special__img {
   @media (min-width: $tablet) {
     width: 476px;
     height: 476px;
+  }
+
+  @media (min-width: $desktop) {
+    width: 600px;
+    height: 600px;
   }
 }
 
@@ -60,6 +85,12 @@
   @media (min-width: $tablet) {
     font-size: 20px;
     line-height: 32px;
+  }
+  line-height: 20px;
+
+  @media (min-width: $desktop) {
+    text-align: left;
+    margin-bottom: 40px;
   }
 }
 
