--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -5,13 +5,14 @@
 
 .user-nav__button,
 .user-nav__link {
-  width: 60px;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
   font-weight: 500;
+  padding: 20px 22px;
+  box-sizing: border-box;
 
   &:hover,
   &:focus {
@@ -19,14 +20,11 @@
   }
 
   @media (min-width: $tablet) {
-    width: 60px;
     height: 80px;
   }
 }
 
 .user-nav__button {
-  padding: 0;
-
   font-size: 12px;
   line-height: 16px;
 
@@ -43,6 +41,7 @@
   display: none;
 
   @media (min-width: $desktop) {
+    margin-left: 7px;
     display: block;
   }
 }
